--- a/_posts/2016-05-06-深圳，对我意味着什么呢?.md
+++ b/_posts/2016-05-06-深圳，对我意味着什么呢?.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: 深圳，对我意味着什么呢？
+category: 随笔
+tag: 思考
 ---
 > 深圳，对我意味着什么呢？为什么？我就是要到深圳，一无所有的来，遭遇挫折了，还是来深圳，一无所有的开始。我想这是梦想之地吧，不过希望一如既往计划好的反而没实现，出乎意料出现的是爱情。
 
