--- a/_posts/2016-08-25-8月日常.md
+++ b/_posts/2016-08-25-8月日常.md
@@ -1,8 +1,10 @@
 --- 
 layout: post
-title: 8月日常
+title: 2016日常
 category: 随笔
 tag: 思考
 ---
 
 > 2016-8-25 安装好laravel，准备laravel之旅。
+
+> 2016-9-08 我又开始认真读书了。
