--- a/_posts/2016-08-25-8月日常.md
+++ b/_posts/2016-08-25-8月日常.md
@@ -14,3 +14,5 @@ tag: 思考
 > 2016-9-11 参加了一次众凑活动---<我的诗篇>。富士康工人诗人许立志，深刻的感受到了他那深深的孤寂。
 
 > 2016-9-20 第一次强烈的意识到写代码是件那么开心的事情。除了它好像没有其他事情是能做的好的了。
+
+> 2016-9-21 认真思考，是什么原因造成我现在的困难处境。
