--- a/_posts/2016-08-25-8月日常.md
+++ b/_posts/2016-08-25-8月日常.md
@@ -16,3 +16,5 @@ tag: 思考
 > 2016-9-20 第一次强烈的意识到写代码是件那么开心的事情。除了它好像没有其他事情是能做的好的了。
 
 > 2016-9-21 认真思考，是什么原因造成我现在的困难处境。
+
+> 2016-9-22 学习了[JavaScript Promise](http://azu.github.io/promises-book/)，思考学而没能及时用到，是否需要继续。
