--- a/_posts/2016-08-25-8月日常.md
+++ b/_posts/2016-08-25-8月日常.md
@@ -20,3 +20,5 @@ tag: 思考
 > 2016-9-22 学习了[JavaScript Promise](http://azu.github.io/promises-book/)，思考学而没能及时用到，是否需要继续。
 
 > 2016-10-11 在这充满套路的世界，能清纯烂漫的套路吗?
+
+> 2016-10-12 二姨妈走了，我只能在这，用微不足道的方式追悼着。
