--- a/_posts/2016-08-25-8月日常.md
+++ b/_posts/2016-08-25-8月日常.md
@@ -5,6 +5,10 @@ category: 随笔
 tag: 思考
 ---
 
+> 2016-11-5 生命中最难的阶段不是没人懂你，而是你不懂你自己.
+
+> 2016-11-4 我拼尽全力想要说的话，可能这辈子都不能传达了．
+
 > 2016-8-25 安装好laravel，准备laravel之旅。
 
 > 2016-9-08 我又开始认真读书了。
@@ -27,4 +31,3 @@ tag: 思考
 
 > 2016-11-1 不断的强迫自己与人交流，打交道，想让自己变得开心点（失败）
 
-> 2016-11-5 生命中最难的阶段不是没人懂你，而是你不懂你自己.
