--- a/_posts/2016-08-25-8月日常.md
+++ b/_posts/2016-08-25-8月日常.md
@@ -31,4 +31,4 @@ tag: 思考
 
 > 2016-11-5 生命中最难的阶段不是没人懂你，而是你不懂你自己.
 
-> 2016-11-8 看了一天[golang](https://github.com/astaxie/build-web-application-with-golang/tree/master/zh),"Go是Google开发的一种编译型，可并行化，并具有垃圾回收功能的编程语言。"---百度百科．不知道为什么自己想学它，可能是不想让自己无事可做．
+> 2016-11-8 看了一天[golang](https://github.com/astaxie/build-web-application-with-golang/tree/master/zh),折腾着装环境,找项目．"Go是Google开发的一种编译型，可并行化，并具有垃圾回收功能的编程语言。"---百度百科．不知道为什么自己想学它，可能是不想让自己无事可做．
