--- a/_posts/2016-08-25-8月日常.md
+++ b/_posts/2016-08-25-8月日常.md
@@ -34,3 +34,5 @@ tag: 思考
 > 2016-11-8 看了一天[golang](https://github.com/astaxie/build-web-application-with-golang/tree/master/zh),折腾着装环境,找项目．"Go是Google开发的一种编译型，可并行化，并具有垃圾回收功能的编程语言。"---百度百科．不知道为什么自己想学它，可能是不想让自己无事可做．
 
 > 2016-11-25 渐渐的开始接受自己，接受不完美的自己。 在接受自我之后，需要实现的流程 和 性格的再造。减少无序以及不确定性， 提升自己的信心。
+
+> 2016-11-28 恍惚，思考过深，擦拭着眼眶，才知自己流了眼泪。
