--- a/_posts/2016-08-25-8月日常.md
+++ b/_posts/2016-08-25-8月日常.md
@@ -1,4 +1,4 @@
---- 
+---
 layout: post
 title: 2016日常
 category: 随笔
@@ -36,3 +36,5 @@ tag: 思考
 > 2016-11-25 渐渐的开始接受自己，接受不完美的自己。 在接受自我之后，需要实现的流程 和 性格的再造。减少无序以及不确定性， 提升自己的信心。
 
 > 2016-11-28 恍惚，思考过深，擦拭着眼眶，才知自己流了眼泪。
+
+> 2016-12-01 经常看英语文档，死啃.
