--- a/_posts/2016-08-25-8月日常.md
+++ b/_posts/2016-08-25-8月日常.md
@@ -40,3 +40,5 @@ tag: 思考
 > 2016-12-01 经常看英语文档，死啃.
 
 > 2016-12-23 一晃停顿好久没写了，不管心情如何，生活是否如意，都需要记录。看了一本书<银河铁道之夜>，继续看完了<西部世界>，看了<欺诈游戏>，买了两本书。以前累计的债，慢慢还。
+
+> 2016-12-29 耐着性子看了三体。
