--- a/_posts/2016-01-03-2017年日常.md
+++ b/_posts/2016-01-03-2017年日常.md
@@ -12,3 +12,5 @@ tag: 思考
 > 2017-02-19  上海,这将是新的旅程吗?
 
 > 2017-03-07  每天漫无目地的乱走，不想给自己一点空闲的时间，也不着急找工作，想多停留在这个时段，记住这强烈的漂泊感.
+
+> 2017-04-11 我疯狂地阅读，电影、文字和目所能及的现实，却看不到自己。随心而动。心要往哪里去就让他也拉着我身体也一起过去，我认识到，这将会是适合我的生活方式。 然而问题在于，我的心，你到底想要往哪里去？又想去干什么？我把眼睛擦了又擦，我实在是看你不清。我和他唯一的默契是这样——他说“我困了，睡觉吧。”于是我便睡去。只有当我睡去我才感觉到你的归来。但醒着,我对你便是糊涂的。也许，随心而动是一种境界。这境界，我现在伸手还够不到。
