--- a/_posts/2017-5-26-beego学习.md
+++ b/_posts/2017-5-26-beego学习.md
@@ -31,7 +31,7 @@ func init() {
 }
 ```
 
-### ORM 接口使用[https://beego.me/docs/mvc/model/orm.md]
+### [ORM 接口使用][https://beego.me/docs/mvc/model/orm.md]
 
 ```go
   var o Ormer
@@ -44,11 +44,11 @@ func init() {
 }
 ```
 
-## context 模块[https://beego.me/docs/module/context.md]
+## [context 模块][https://beego.me/docs/module/context.md]
 
 > 上下文模块主要是针对 HTTP 请求中，request 和 response 的进一步封装，他包括用户的输入和输出，用户的输入即为 request，context 模块中提供了 Input 对象进行解析，用户的输出即为 response，context 模块中提供了 Output 对象进行输出。
 
-##  golang strconv包 [https://golang.org/pkg/strconv/]
+##  [golang strconv包][https://golang.org/pkg/strconv/]
 
 > strconv实现与基本数据类型的字符串表示形式的转换
 
@@ -87,7 +87,7 @@ func init() {
 }  
 ```
 
-## casbin [https://github.com/casbin/casbin]
+## [casbin] [https://github.com/casbin/casbin]
 
 >casbin是一个用Go语言打造的轻量级开源访问控制框架，casbin采用了元模型的设计思想，支持多种经典的访问控制方案，如基于角色的访问控制RBAC、基于属性的访问控制ABAC等。
 
