--- a/_posts/2017-5-26-beego学习.md
+++ b/_posts/2017-5-26-beego学习.md
@@ -31,7 +31,7 @@ func init() {
 }
 ```
 
-### [ORM 接口使用][https://beego.me/docs/mvc/model/orm.md]
+### [ORM 接口使用](https://beego.me/docs/mvc/model/orm.md)
 
 ```go
   var o Ormer
@@ -87,7 +87,7 @@ func init() {
 }  
 ```
 
-## [casbin] (https://github.com/casbin/casbin)
+## [casbin](https://github.com/casbin/casbin)
 
 >casbin是一个用Go语言打造的轻量级开源访问控制框架，casbin采用了元模型的设计思想，支持多种经典的访问控制方案，如基于角色的访问控制RBAC、基于属性的访问控制ABAC等。
 
