--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -20,3 +20,4 @@ tag: 思考
 
 > 2017-06-21 生活缓慢，沒有生气的进行着，我却只能目睹着，无力作出改变。想得太多，做的太少。
 
+> 2017-06-21 花了一下午看了风云的博客，一边在感叹别人际遇的丰富，也在唏嘘人人之间的差距。自己黯淡，无生气的生活，拿什么故事去与别人分享。我也想很努力，但该从那个方向呢？我的故事该如何续写。
