--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -23,4 +23,4 @@ tag: 思考
 > 2017-06-21 花了一下午看了风云的博客，一边在感叹别人际遇的丰富，也在唏嘘人人之间的差距。自己黯淡，无生气的生活，拿什么故事去与别人分享。我也想很努力，但该从那个方向呢？我的故事该如何续写。[风云博客链接](http://blog.codingnow.com/cloud/PassedDays)
 
 > 2017-06-22 下雨天的好处是，能为自己无所事事，找到了个恰当的理由，能在屋里闻泥土的气息。下雨天的坏处是，容易想念一个人，把心也弄得湿乎乎的。
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="200" height="86" src="http://music.163.com/#/m/song?id=445546453"></iframe>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="200" height="86" src="http://music.163.com/outchain/player?type=2&id=445546453&auto=0&height=66"></iframe>
