--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -25,3 +25,5 @@ tag: 思考
 > 2017-06-22 下雨天的好处是，能为自己无所事事，找到了个恰当的理由，能在屋里闻泥土的气息。下雨天的坏处是，容易想念一个人，把心也弄得湿乎乎的。
 
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="90%" height="86" src="//music.163.com/outchain/player?type=2&id=445546453&auto=0&height=66"></iframe>
+
+> 2017-06-23 寂寞的流浪,一步一步走,人生还是要向前走。 
