--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -27,3 +27,5 @@ tag: 思考
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="90%" height="86" src="//music.163.com/outchain/player?type=2&id=445546453&auto=0&height=66"></iframe>
 
 > 2017-06-23 寂寞的流浪,一步一步走,人生还是要向前走。 
+
+> 2017-06-24 追完了<权力的游戏>,很吃力，很累，剧并不是很精彩值得认真看，但半途放弃让自己也不甘心。对中世纪西方骑士精神很崇拜，会为自己的一句许诺，不惜鞠躬尽瘁，终其一生只为自己的使命。反观现代人早以没有这种精神，对自己责任过于逃避，承担。
