--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -31,3 +31,5 @@ tag: 思考
 > 2017-06-24 追完了<权力的游戏>,很吃力，很累，剧并不是很精彩值得认真看，但半途放弃让自己也不甘心。对中世纪西方骑士精神很崇拜，会为自己的一句许诺，不惜鞠躬尽瘁，终其一生只为自己的使命。反观现代人早以没有这种精神，对自己责任过于逃避，承担。<br/>   自己形象都管不好，还有什么能力掌控人生。看，生活，不就是一个不断用自己的手打自己的脸的过程么。我不敢想象这样下去的自己会成什么样，永远不要讨厌自己，那太残忍。亦不要推卸，是谁把我变成了现在这样。
 
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="90%" height="86" src="//music.163.com/outchain/player?type=2&id=26349389&auto=0&height=66"></iframe>
+
+> 2017-06-24 逃避可耻也没用。
