--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -33,3 +33,5 @@ tag: 思考
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="90%" height="86" src="//music.163.com/outchain/player?type=2&id=26349389&auto=0&height=66"></iframe>
 
 > 2017-06-24 逃避可耻也没用。
+
+> 2017-06-27 回家的路上，遇到了一个似曾相识的背影。我就这样在后面默默注视了一路。没有爱情的时候，就好好思考怎么挣钱。想到你会在未来的某天来提醒我这些细节，我的心就觉得温暖而饱满。 
