--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -37,3 +37,5 @@ tag: 思考
 > 2017-06-27 回家的路上，遇到了一个似曾相识的背影。我就这样在后面默默注视了一路。没有爱情的时候，就好好思考怎么挣钱。想到你会在未来的某天来提醒我这些细节，我的心就觉得温暖而饱满。 
 
 > 2017-06-28 要做一个有趣的人，我想我应该没做到了。很糟糕。我发现，我其实还是一个内心不错的人，乐于助人，以及，莫名其妙的愤慨。
+
+> 2017-06-29 很惊喜，很尴尬的一天，感动于能和同事们过一个生日，羞愧自己不能说上一些有场面的话。
