--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -41,3 +41,5 @@ tag: 思考
 > 2017-06-29 很惊喜，很尴尬的一天，感动于能和同事们过一个生日，羞愧自己不能说上一些有场面的话。
 
 > 2017-06-30 Don't drink to feel better， Only drink to feel even bettter. 
+
+> 2017-07-02 去了杭州新图书馆，很多书，各种展览，我且拿着两本摇滚史，昏昏睡着了。很多书，自己很想看，但没有那沉静的心了。一边急躁的翻阅着，一边内心告诉自己慢慢来。如果找下一个住所，尽量找靠近图书馆的，有花园的地方，只有这才能安慰我的心灵。
