--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -45,3 +45,6 @@ tag: 思考
 > 2017-07-02 去了杭州新图书馆，很多书，各种展览，我且拿着两本摇滚史，昏昏睡着了。很多书，自己很想看，但没有那沉静的心了。一边急躁的翻阅着，一边内心告诉自己慢慢来。如果找下一个住所，尽量找靠近图书馆的，有花园的地方，只有这才能安慰我的心灵。
 
 > 2017-07-03 当真正用到go的时候，才发觉自己理解到的东西还很多。浮躁的表现之一是:急于看到结果，渴望被看到。
+
+> 2017-07-05 温暖的人心里都是有黑洞的。因为刻薄的人都把自己的阴影转移给了别人，而充满爱和阳光的人，却把大部分的痛苦自己吞咽下去。虽然没有人按照你所期待的方式来爱你。但你却可以用你希望的方式去爱别人。<br/>最近工作，学习，饮食很有规律，思念甚少。
+
