--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -49,3 +49,5 @@ tag: 思考
 > 2017-07-05 温暖的人心里都是有黑洞的。因为刻薄的人都把自己的阴影转移给了别人，而充满爱和阳光的人，却把大部分的痛苦自己吞咽下去。虽然没有人按照你所期待的方式来爱你。但你却可以用你希望的方式去爱别人。<br/>最近工作，学习，饮食很有规律，思念甚少。
 
 > 2017-07-07 世界太辽阔了，我们生逢此世，如果穷极一生换来的只是一个狭隘、匮乏的人生，那真令人扼腕。
+
+> 2017-07-09 在空白的时间了，自己经常会做一些没经过考虑的计划，让一件事变成纯粹的打发时间了。有计划性的参加社交活动，从聆听，到参与，慢慢学习；更改对付费模式的认知。
