--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -51,3 +51,5 @@ tag: 思考
 > 2017-07-07 世界太辽阔了，我们生逢此世，如果穷极一生换来的只是一个狭隘、匮乏的人生，那真令人扼腕。
 
 > 2017-07-09 在空白的时间了，自己经常会做一些没经过考虑的计划，让一件事变成纯粹的打发时间了。有计划性的参加社交活动，从聆听，到参与，慢慢学习；更改对付费模式的认知。
+
+> 2017-07-11 黑夜里自己会变得对自己坦诚而非自欺欺人 。我会做一个自己想做的人,可我并不知道那是谁,这个问题不应该有答案，或是说，很长时间内都不应被回答，因为降临的救赎是廉价的，是寻找的过程让它弥足珍贵。
