--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -55,3 +55,5 @@ tag: 思考
 > 2017-07-11 黑夜里自己会变得对自己坦诚而非自欺欺人 。我会做一个自己想做的人,可我并不知道那是谁,这个问题不应该有答案，或是说，很长时间内都不应被回答，因为降临的救赎是廉价的，是寻找的过程让它弥足珍贵。
 
 > 2017-07-13 文字惨白，刻意深刻的文字，也并不能表达出自己真正的思考。
+
+> 2017-07-14 幻想过很多种遇你相见的场景，但见面且是你主动提出得，这让羞愧了一阵。悟空传，电影:悟空抗拒着命运，就了那失去的晚霞。最终放下、认输的时候，才觉醒归来，为改变不了的结局，奋斗完。在这乏善可陈的两小时里，我极力感受这你带来的感受，不知道下次会是什么时候.
