--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -61,3 +61,5 @@ tag: 思考
 > 2017-07-16 陪大学同学去了大护法，电影很精彩，满是隐喻，层次很到位是部好电影。但看的过程中完，我感受到莫名的焦虑。
 
 > 2017-07-17 精神恍惚的一天，情绪失落。
+
+> 2017-07-18 每当回头审视自己的一天，有的是巨大焦虑和徒然担忧。带着充满了杂质的心，我能行多远。
