--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -63,3 +63,7 @@ tag: 思考
 > 2017-07-17 精神恍惚的一天，情绪失落。
 
 > 2017-07-18 每当回头审视自己的一天，有的是巨大焦虑和徒然担忧。带着充满了杂质的心，我能行多远。
+
+> 2017-07-20  工作中经常会被其他事打扰，是自己不坚定，容易被分散注意力；也是自己没能对一件事，注入投入。
+- 学会拒绝其他事(优秀的人，通常不是好相处的人，因为他和纷繁的琐事保持着距离)
+- 对事情轻重，能快速做合理安排(这需要自律，长期练习)
