--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -67,3 +67,5 @@ tag: 思考
 > 2017-07-20  工作中经常会被其他事打扰，是自己不坚定，容易被分散注意力；也是自己没能对一件事，注入投入。
 - 学会拒绝其他事(优秀的人，通常不是好相处的人，因为他和纷繁的琐事保持着距离)
 - 对事情轻重，能快速做合理安排(这需要自律，长期练习)
+
+> 再美好的时光总会结束，再好看的电影也会剧终人散，当过后再回味，觉得真实又像虚幻的情境。我不要去考虑爱的能力，努力去吧故事继续下去。
