--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -69,3 +69,5 @@ tag: 思考
 - 对事情轻重，能快速做合理安排(这需要自律，长期练习)
 
 > 再美好的时光总会结束，再好看的电影也会剧终人散，当过后再回味，觉得真实又像虚幻的情境。我不要去考虑爱的能力，努力去吧故事继续下去。
+
+> 每当有人问起我生日的时候，我都会思索是告诉农历时间，还是新历，毕竟两者相差还是有段时间。25岁了，无存款，无女友！我知道我迫切急速想让自己，快成长。越来越渴求金钱，这是对父母最实在的回馈，也不想因为它成为自己生活上的困扰。精神，生活的双重贫瘠，我还要不断索取。我还需要一点时间，但绝望也在无边无际的涌在身后。
