--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -68,8 +68,11 @@ tag: 思考
 - 学会拒绝其他事(优秀的人，通常不是好相处的人，因为他和纷繁的琐事保持着距离)
 - 对事情轻重，能快速做合理安排(这需要自律，长期练习)
 
-> 再美好的时光总会结束，再好看的电影也会剧终人散，当过后再回味，觉得真实又像虚幻的情境。我不要去考虑爱的能力，努力去吧故事继续下去。
+> 2017-07-22 再美好的时光总会结束，再好看的电影也会剧终人散，当过后再回味，觉得真实又像虚幻的情境。我不要去考虑爱的能力，努力去吧故事继续下去。
 
-> 每当有人问起我生日的时候，我都会思索是告诉农历时间，还是新历，毕竟两者相差还是有段时间。25岁了，无存款，无女友！我知道我迫切急速想让自己，快成长。越来越渴求金钱，这是对父母最实在的回馈，也不想因为它成为自己生活上的困扰。精神，生活的双重贫瘠，我还要不断索取。我还需要一点时间，但绝望也在无边无际的涌在身后。
+> 2017-07-24 每当有人问起我生日的时候，我都会思索是告诉农历时间，还是新历，毕竟两者相差还是有段时间。25岁了，无存款，无女友！我知道我迫切急速想让自己，快成长。越来越渴求金钱，这是对父母最实在的回馈，也不想因为它成为自己生活上的困扰。精神，生活的双重贫瘠，我还要不断索取。我还需要一点时间，但绝望也在无边无际的涌在身后。
 
-> 今天面试了两家公司，一家宜康，英国公司，面试先在了一套笔试，内容都很基础，但在自己薄弱的数据库哪里，没能想到正确答案。面试大多时候是在考核我的品行，综合能力，一边面试，一边记录下来，这细节也看出来外企，对待任何事都有严谨，认真的流程。但公司并不是自己所向往，公司技术团队人很少，项目陈旧，不会有接触到新领域的机会。第二家公司江苏华信区块链，面试是电话面试，因为是在公司，再加上信号不好，面试过程也碰碰磕磕，面试问题很宽广，很注重个人基础能力，自己也挺向往的。
+> 2017-07-26 今天面试了两家公司，一家宜康，英国公司，面试先在了一套笔试，内容都很基础，但在自己薄弱的数据库哪里，没能想到正确答案。面试大多时候是在考核我的品行，综合能力，一边面试，一边记录下来，这细节也看出来外企，对待任何事都有严谨，认真的流程。但公司并不是自己所向往，公司技术团队人很少，项目陈旧，不会有接触到新领域的机会。第二家公司江苏华信区块链，面试是电话面试，因为是在公司，再加上信号不好，面试过程也碰碰磕磕，面试问题很宽广，很注重个人基础能力，自己也挺向往的。
+
+> 2017-07-27 下午很意外的接到abcam的入职电话，Hr在不断强调着公司平台的优秀，企图压榨着我的薪资。抛开薪资，福利看待着两家公司，我更倾向数联。那里可能性更多，更适合我吧。我不需要平台给我镀金，不需要它附属的名气。我想的学习的机会，扩宽眼见的地方.
+
