--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -78,4 +78,4 @@ tag: 思考
 
 > 2017-07-29 25岁了，时间太快太快了。现在的生活，远没达到自己计划中那样，自己是被生活推着前进，被迫改变的那一方，从未能从容不迫的走着自己选择的路，一直都是在浅薄的急躁中。告诉新一岁的自己:你并不孤独了，你已经找到你想去追求，拥有的美好的人了，你所追逐的远方，并不是那么飘忽不定，你所忽视的眼前，已经出现新的光斑。
 
-
+> 2017-07-30 想念一个人的滋味，在它面前自己没法隐藏。
