--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -79,3 +79,5 @@ tag: 思考
 > 2017-07-29 25岁了，时间太快太快了。现在的生活，远没达到自己计划中那样，自己是被生活推着前进，被迫改变的那一方，从未能从容不迫的走着自己选择的路，一直都是在浅薄的急躁中。告诉新一岁的自己:你并不孤独了，你已经找到你想去追求，拥有的美好的人了，你所追逐的远方，并不是那么飘忽不定，你所忽视的眼前，已经出现新的光斑。
 
 > 2017-07-30 想念一个人的滋味，在它面前自己没法隐藏。
+
+> 2017-07-31 整天都在纠结于该做什么选择，一直都是患得患失的状态。自己害怕选错后，没时间给自己重新选择了。也不明白自己想期望的公司，只能冀希望能有人分享他经验。当我遇到困境，抉择的时候，我总会想是别人会做什么决定。渐渐文字带给我的另一层意义是，写下自己所思所感留下来，别人能从中参考，吸取到自己的思考。
