--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -81,3 +81,5 @@ tag: 思考
 > 2017-07-30 想念一个人的滋味，在它面前自己没法隐藏。
 
 > 2017-07-31 整天都在纠结于该做什么选择，一直都是患得患失的状态。自己害怕选错后，没时间给自己重新选择了。也不明白自己想期望的公司，只能冀希望能有人分享他经验。当我遇到困境，抉择的时候，我总会想是别人会做什么决定。渐渐文字带给我的另一层意义是，写下自己所思所感留下来，别人能从中参考，吸取到自己的思考。
+
+> 2017-08-01 一天中的大多时候，都是在不断刷新着页面，找不到合适的事情做。自我驱动能力太差。
