--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -83,3 +83,5 @@ tag: 思考
 > 2017-07-31 整天都在纠结于该做什么选择，一直都是患得患失的状态。自己害怕选错后，没时间给自己重新选择了。也不明白自己想期望的公司，只能冀希望能有人分享他经验。当我遇到困境，抉择的时候，我总会想是别人会做什么决定。渐渐文字带给我的另一层意义是，写下自己所思所感留下来，别人能从中参考，吸取到自己的思考。
 
 > 2017-08-01 一天中的大多时候，都是在不断刷新着页面，找不到合适的事情做。自我驱动能力太差。
+
+> 2017-08-03 正式申请离职了，经理也没有挽留我。开始交接，等待人事离职手续，一切都会顺理成章。等真的要离开了，回想这段时间，才发现自己一直没融入其中，公司没有条理的流程，陈旧臃肿的代码，只愿搁于游戏的同事，都是自己不愿融入的理由吧。我没能清楚的认识到自己身上处事的洁癖症，认为在里面保持独立，自省会能得到别人的欣奇，另类的看法。其实这样失去了让别人理解你和了解他们对生活的理解，处事为人的风格。说到底，自己不愿融入他们，还是我的心理障碍。
