--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -87,3 +87,11 @@ tag: 思考
 > 2017-08-03 正式申请离职了，经理也没有挽留我。开始交接，等待人事离职手续，一切都会顺理成章。等真的要离开了，回想这段时间，才发现自己一直没融入其中，公司没有条理的流程，陈旧臃肿的代码，只愿搁于游戏的同事，都是自己不愿融入的理由吧。我没能清楚的认识到自己身上处事的洁癖症，认为在里面保持独立，自省会能得到别人的欣奇，另类的看法。其实这样失去了让别人理解你和了解他们对生活的理解，处事为人的风格。说到底，自己不愿融入他们，还是我的心理障碍。
 
 > 2017-08-07 入职杭州数联公司，细数起来这是第4家公司了。没有归属感，总是让自己轻易有离开的想法，给自己试错的时间越来越少。新的公司比较远，自己又可以拾起看书计划，也有理由说服自己换个新的住所。一切都是崭新的，未知的。
+
+> 2017-08-08 读完李笑来的<把时间当朋友>，书中给了自己从未有过的角度审视自己，作者通过剖析自己怎样明白过来这个过程，让自己重新去理解时间，感悟。很多想法和做法和自己不谋而合，但我缺得是贯彻到底的毅力，和更深层次的思考。说到底自己还是个平庸的努力者。
+- 随时记录，时刻感受到自己的成长。
+- 自己没那么特别。
+- 注重未来回报的价值。
+- 改造这个世界，首先要改造的就是我们自己。
+- 把时间当朋友,开启心智,努力想明白人这一辈子想要过什么样的生活。
+- 相信我，你并不孤独。
