--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -26,7 +26,7 @@ tag: 思考
 
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="90%" height="86" src="//music.163.com/outchain/player?type=2&id=445546453&auto=0&height=66"></iframe>
 
-> 2017-06-23 寂寞的流浪,一步一步走,人生还是要向前走。 
+> 2017-06-23 寂寞的流浪,一步一步走,人生还是要向前走。
 
 > 2017-06-24 追完了<权力的游戏>,很吃力，很累，剧并不是很精彩值得认真看，但半途放弃让自己也不甘心。对中世纪西方骑士精神很崇拜，会为自己的一句许诺，不惜鞠躬尽瘁，终其一生只为自己的使命。反观现代人早以没有这种精神，对自己责任过于逃避，承担。<br/>   自己形象都管不好，还有什么能力掌控人生。看，生活，不就是一个不断用自己的手打自己的脸的过程么。我不敢想象这样下去的自己会成什么样，永远不要讨厌自己，那太残忍。亦不要推卸，是谁把我变成了现在这样。
 
@@ -34,13 +34,13 @@ tag: 思考
 
 > 2017-06-24 逃避可耻也没用。
 
-> 2017-06-27 回家的路上，遇到了一个似曾相识的背影。我就这样在后面默默注视了一路。没有爱情的时候，就好好思考怎么挣钱。想到你会在未来的某天来提醒我这些细节，我的心就觉得温暖而饱满。 
+> 2017-06-27 回家的路上，遇到了一个似曾相识的背影。我就这样在后面默默注视了一路。没有爱情的时候，就好好思考怎么挣钱。想到你会在未来的某天来提醒我这些细节，我的心就觉得温暖而饱满。
 
 > 2017-06-28 要做一个有趣的人，我想我应该没做到了。很糟糕。我发现，我其实还是一个内心不错的人，乐于助人，以及，莫名其妙的愤慨。
 
 > 2017-06-29 很惊喜，很尴尬的一天，感动于能和同事们过一个生日，羞愧自己不能说上一些有场面的话。
 
-> 2017-06-30 Don't drink to feel better， Only drink to feel even bettter. 
+> 2017-06-30 Don't drink to feel better， Only drink to feel even bettter.
 
 > 2017-07-02 去了杭州新图书馆，很多书，各种展览，我且拿着两本摇滚史，昏昏睡着了。很多书，自己很想看，但没有那沉静的心了。一边急躁的翻阅着，一边内心告诉自己慢慢来。如果找下一个住所，尽量找靠近图书馆的，有花园的地方，只有这才能安慰我的心灵。
 
@@ -99,3 +99,5 @@ tag: 思考
 > 2017-08-09 读池建强 <MacTalk 人生元编程>,刚读还是很惊艳的，阅读越无味，写的东西显得碎片化，并且浮光掠影，从中获得营养不多。很多观点和作者不谋而合，要作出一番事业，要付出的太多，每人能轻易成功。作者的心里路程，给了我很好的启示，带着思考，警示的态度过活着，书写出自己对过往的理解。
 
 > 2017-08-31 "所谓的天才就是追着蝴蝶，不知不觉中爬上山顶的少年".
+
+> 2017-09-05 又开始迷失，因为自己的定位错了。
