--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -101,3 +101,5 @@ tag: 思考
 > 2017-08-31 "所谓的天才就是追着蝴蝶，不知不觉中爬上山顶的少年".
 
 > 2017-09-05 又开始迷失，因为自己的定位错了。
+
+> 2017-09-11 奇葩说,一档敢于让国人发声并且思考的节目。表面似乎婉转迂回，实则有理想有勇气有热血。不敢说一档节目能改变多少国人，但确确实实改变了我，让我更深邃更多元的看这个世界。
