--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -109,3 +109,5 @@ tag: 思考
 > 2017-09-17 持续两天的RubyConf,各路大神聚在一起，看着他们谈笑风生，自己无地自容，自卑情绪格外强烈。远远看着，静静听着，羡慕他们能在一个领域能专注，痴迷于中。
 
 > 2017-09-19 最近越来越忧虑，忧虑自己一天天更大了，忧虑自己是否能作出一番事业，忧虑自己没有年轻的新人厉害.
+
+> 2017-09-20 失败，本以打算写个Evernote,结果烂尾，不是怕困难，是觉得力不从心，对这件事是否值得做怀疑。又开始做了个新项目.祈祷这次能坚持做完.
