--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -111,3 +111,10 @@ tag: 思考
 > 2017-09-19 最近越来越忧虑，忧虑自己一天天更大了，忧虑自己是否能作出一番事业，忧虑自己没有年轻的新人厉害.
 
 > 2017-09-20 失败，本以打算写个Evernote,结果烂尾，不是怕困难，是觉得力不从心，对这件事是否值得做怀疑。又开始做了个新项目.祈祷这次能坚持做完.
+
+> 2017-09-21 白夜追凶笔记。
+- 犯罪标记行为是指犯罪人为了满足某种心理上或情感方面的需要而实施的一种特殊行为，如患有洁癖强迫症的凶手每次行凶都要清理现场。 
+- 每个人都有自己熟悉的、经常活动的区域，也就是所谓的心理安全区。
+- 尸体上伤口的创面皮肤是内收而不是外翻的，说明死者受此伤时还活着，身体的自愈系统仍在运转。 
+- 洛卡尔物质交换定律：犯罪行为人只要实施犯罪行为，必然会在犯罪现场直接或间接地作用于被侵害客体及其周围环境，会自觉或不自觉地遗留下痕迹。
+
