--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -118,3 +118,4 @@ tag: 思考
 - 尸体上伤口的创面皮肤是内收而不是外翻的，说明死者受此伤时还活着，身体的自愈系统仍在运转。 
 - 洛卡尔物质交换定律：犯罪行为人只要实施犯罪行为，必然会在犯罪现场直接或间接地作用于被侵害客体及其周围环境，会自觉或不自觉地遗留下痕迹。
 
+> 2017-10-07 想真心走进一个人谈何容易，每一个人都在坚守着自己那片骄傲的孤岛。
