--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -119,3 +119,5 @@ tag: 思考
 - 洛卡尔物质交换定律：犯罪行为人只要实施犯罪行为，必然会在犯罪现场直接或间接地作用于被侵害客体及其周围环境，会自觉或不自觉地遗留下痕迹。
 
 > 2017-10-07 想真心走进一个人谈何容易，每一个人都在坚守着自己那片骄傲的孤岛。
+
+> 2017-10-08 满目疮痍的生活，让自己越来越苦闷，试着用另外一种方式表达出来吧，用大笑来稀释生活的沉重。
