--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -121,3 +121,5 @@ tag: 思考
 > 2017-10-07 想真心走进一个人谈何容易，每一个人都在坚守着自己那片骄傲的孤岛。
 
 > 2017-10-08 满目疮痍的生活，让自己越来越苦闷，试着用另外一种方式表达出来吧，用大笑来稀释生活的沉重。
+
+> 2017-10-09 要改变，先让自己走出去。当个笑得最欢的人，最会隐匿最悲伤的人。
