--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -123,3 +123,5 @@ tag: 思考
 > 2017-10-08 满目疮痍的生活，让自己越来越苦闷，试着用另外一种方式表达出来吧，用大笑来稀释生活的沉重。
 
 > 2017-10-09 要改变，先让自己走出去。当个笑得最欢的人，最会隐匿最悲伤的人。
+
+> 2017-10-10 但你跟另一个人分享生活里最鸡零狗碎的一部分，而另一个，并不会毫不厌倦地全部接受。这是要好好思考的地方。
