--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -125,3 +125,5 @@ tag: 思考
 > 2017-10-09 要改变，先让自己走出去。当个笑得最欢的人，最会隐匿最悲伤的人。
 
 > 2017-10-10 但你跟另一个人分享生活里最鸡零狗碎的一部分，而另一个，并不会毫不厌倦地全部接受。这是要好好思考的地方。
+
+> 2017-10-11 只因为 我们一直生活在光明中，才不知道黑暗可以有多暗。多经历一些事吧，这对于人生的价值观是一种重构，也是一种锤炼。
