--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -127,3 +127,5 @@ tag: 思考
 > 2017-10-10 但你跟另一个人分享生活里最鸡零狗碎的一部分，而另一个，并不会毫不厌倦地全部接受。这是要好好思考的地方。
 
 > 2017-10-11 只因为 我们一直生活在光明中，才不知道黑暗可以有多暗。多经历一些事吧，这对于人生的价值观是一种重构，也是一种锤炼。
+
+> 2017-10-12 Rick 一个能把黑洞整成恒星的人，没电了就造一个小星球让里面的劳动者来提供电力，在该陪着女儿长大的日子里驰骋银河系，嘴巴有剧毒，骨子里三观很正，聪明到极致又明白世界的运行规律,但是依旧敌不过那些规律和自己的意识。
