--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -129,3 +129,5 @@ tag: 思考
 > 2017-10-11 只因为 我们一直生活在光明中，才不知道黑暗可以有多暗。多经历一些事吧，这对于人生的价值观是一种重构，也是一种锤炼。
 
 > 2017-10-12 Rick 一个能把黑洞整成恒星的人，没电了就造一个小星球让里面的劳动者来提供电力，在该陪着女儿长大的日子里驰骋银河系，嘴巴有剧毒，骨子里三观很正，聪明到极致又明白世界的运行规律,但是依旧敌不过那些规律和自己的意识。
+
+> 2017-10-15 "你只是个孩子，你根本不晓得你在说什麽。所以问你艺术，你可能会提出艺术书籍中的粗浅论调，有关米开朗基罗，你知道很多，他的满腔政治热情，与教皇相交莫逆，耽于性爱，你对他很清楚吧？但你连西斯汀教堂的气味也不知道吧？你没试过站在那儿，昂首眺望天花板上的名画吧？肯定未见过吧？如果我问关于女人的事，你大可以向我如数家珍，你可能上过几次床，但你没法说出在女人身旁醒来时，那份内心真正的喜悦。你年轻彪悍，我如果和你谈论战争，你会向我大抛莎士比亚，朗诵“共赴战场，亲爱的朋友”，但你从未亲临战阵，未试过把挚友的头拥入怀里，看着他吸着最后一口气，凝望着你，向你求助。我问你何为爱情，你可能只会吟风弄月，但你未试过全情投入真心倾倒，四目交投时彼此了解对方的心，好比上帝安排天使下凡只献给你，把你从地狱深渊拯救出来，对她百般关怀的感受你也从未试过，你从未试过对她的情深款款矢志厮守，明知她患了绝症也再所不惜，你从未尝试过痛失挚爱的感受......"
