--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -135,3 +135,5 @@ tag: 思考
 > 2017-10-17  "我觉得我人生的前20年，在学校里度过的日子，都是内省的。像是在平静的陆地上，用泥土精心雕琢着一个城堡，从未有风暴来袭过，听着隐隐地海浪声，便心怀向往地期待一片蔚蓝的大海。离开学校的时候，我才发现，一个小小的海浪拍来，便能让我的城堡消失在沙滩上，没有任何痕迹。而那卷走我的漩涡，让我甚至连呼吸的力量都没有，我的眼睛无法睁开，既看不到前方，也看不清自己。"------ [摘](https://www.douban.com/note/639996530/)
 
 > 2017-10-18  "你所经历的我也曾经抵达，我正遭受的也许甚于你的今天。可是，我还是想和你做一个约定，就像是守望那间小店一样的邀约：我在春天等你" -------和菜头
+
+> 2017-10-19 好久没认真坐下来，反思审视写一些东西了。 
