--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -137,3 +137,5 @@ tag: 思考
 > 2017-10-18  "你所经历的我也曾经抵达，我正遭受的也许甚于你的今天。可是，我还是想和你做一个约定，就像是守望那间小店一样的邀约：我在春天等你" -------和菜头
 
 > 2017-10-19 好久没认真坐下来，反思审视写一些东西了。 
+
+> 2017-10-22 习惯了压抑自己，再沉重的心情，选择去逃避面对自己，减少它带给自己的创痛。自身道路的迷茫，灰暗的现状，无力作出改变的困境，让自己除了沉默，忍受，做不了什么。
