--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -139,3 +139,5 @@ tag: 思考
 > 2017-10-19 好久没认真坐下来，反思审视写一些东西了。 
 
 > 2017-10-22 习惯了压抑自己，再沉重的心情，选择去逃避面对自己，减少它带给自己的创痛。自身道路的迷茫，灰暗的现状，无力作出改变的困境，让自己除了沉默，忍受，做不了什么。
+
+> 2017-10-29 我嫉妒别人的年轻，且又渴望着能走进，看到别人为一件事，热血的坚持着。我会为自己难过，痛恨着自己的无能。
