--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -141,3 +141,5 @@ tag: 思考
 > 2017-10-22 习惯了压抑自己，再沉重的心情，选择去逃避面对自己，减少它带给自己的创痛。自身道路的迷茫，灰暗的现状，无力作出改变的困境，让自己除了沉默，忍受，做不了什么。
 
 > 2017-10-29 我嫉妒别人的年轻，且又渴望着能走进，看到别人为一件事，热血的坚持着。我会为自己难过，痛恨着自己的无能。
+
+> 2017-11-01 很难过的一天，试用期没过。辞退理由是：做事马虎，没有团队交流积极性。在这方面确实做的很差，所以我没有任何怨言的接受了，我不能去评判别人用人标准。我难过的理由是，生活里的那个裂缝，终于崩裂开了，到自己必须去面临改变的决策的时候了，不能这样苟活着。
