--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -1,41 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+---
+layout: post
+title: 2017日常
+category: 随笔
+tag: 思考
+---
 
-    <title>alshin - 2017日常</title>
-    <meta name="description" content="">
-
-    <link rel="stylesheet" href="/assets/css/bootstrap.css">
-    <link rel="stylesheet" href="/assets/css/animate.css">
-    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/assets/css/font.css">
-    <link rel="stylesheet" href="/assets/css/landing.css">
-    <link rel="stylesheet" href="/assets/css/app.css">
-    <link rel="stylesheet" href="/assets/css/highlight.css">
-    <link rel="stylesheet" href="/assets/css/custom.css">
-
-    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_1262884701'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1262884701' type='text/javascript'%3E%3C/script%3E"));</script>
-</head>
-
-    <body>
-        <section id="wrapper">
-            <article class="post">
-                <header>
-                    <h1>2017日常</h1>
-                    <h2 class="headline">03 Jan 2017</h2>
-                </header>
-                <!--                                                                                                                                                                                -->
-                <section id="post-body">
-                    > 2017-01-03 hello 2017
-
-> 2017-01-13  正式结束了在深圳市微莱信息科技有限公司半年的工作。
-
-> 2017-02-19  上海,这将是新的旅程吗?
-
-> 2017-03-07  每天漫无目地的乱走，不想给自己一点空闲的时间，也不着急找工作，想多停留在这个时段，记住这强烈的漂泊感.
+> 2017-01-03 hello 2017
 
 > 2017-04-11 我疯狂地阅读，电影、文字和目所能及的现实，却看不到自己。随心而动。心要往哪里去就让他也拉着我身体也一起过去，我认识到，这将会是适合我的生活方式。 然而问题在于，我的心，你到底想要往哪里去？又想去干什么？我把眼睛擦了又擦，我实在是看你不清。我和他唯一的默契是这样——他说“我困了，睡觉吧。”于是我便睡去。只有当我睡去我才感觉到你的归来。但醒着,我对你便是糊涂的。也许，随心而动是一种境界。这境界，我现在伸手还够不到。
 
@@ -167,39 +137,3 @@
 > 2017-10-29 我嫉妒别人的年轻，且又渴望着能走进，看到别人为一件事，热血的坚持着。我会为自己难过，痛恨着自己的无能。
 
 > 2017-11-01 很难过的一天，试用期没过。辞退理由是：做事马虎，没有团队交流积极性。在这方面确实做的很差，所以我没有任何怨言的接受了，我不能去评判别人用人标准。我难过的理由是，生活里的那个裂缝，终于崩裂开了，到自己必须去面临改变的决策的时候了，不能这样苟活着。
-
-                </section>
-            </article>
-
-            <div id="disqus_thread"></div>
-            <script type="text/javascript">
-                var disqus_shortname = 'alshin';
-                (function() {
-                    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-                })();
-            </script>
-            <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-            <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-
-            <footer id="footer">
-                <div id="social">
-                    <a class="symbol" href="https://github.com/yundshang">
-                      <i class="fa fa-github"></i>
-                    </a>
-                    <a class="symbol" href="https://twitter.com">
-                      <i class="fa fa-twitter"></i>
-                    </a>
-                    <a class="symbol" href="http://weibo.com">
-                      <i class="fa fa-weibo"></i>
-                    </a>
-                </div>
-                <p class="small">
-                    © 版权所有 alshin
-                </p>
-            </footer>
-        </section>
-
-    </body>
-</html>
