--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -107,9 +107,9 @@ tag: 思考
 > 2017-09-20 失败，本以打算写个Evernote,结果烂尾，不是怕困难，是觉得力不从心，对这件事是否值得做怀疑。又开始做了个新项目.祈祷这次能坚持做完.
 
 > 2017-09-21 白夜追凶笔记。
-- 犯罪标记行为是指犯罪人为了满足某种心理上或情感方面的需要而实施的一种特殊行为，如患有洁癖强迫症的凶手每次行凶都要清理现场。 
+- 犯罪标记行为是指犯罪人为了满足某种心理上或情感方面的需要而实施的一种特殊行为，如患有洁癖强迫症的凶手每次行凶都要清理现场。
 - 每个人都有自己熟悉的、经常活动的区域，也就是所谓的心理安全区。
-- 尸体上伤口的创面皮肤是内收而不是外翻的，说明死者受此伤时还活着，身体的自愈系统仍在运转。 
+- 尸体上伤口的创面皮肤是内收而不是外翻的，说明死者受此伤时还活着，身体的自愈系统仍在运转。
 - 洛卡尔物质交换定律：犯罪行为人只要实施犯罪行为，必然会在犯罪现场直接或间接地作用于被侵害客体及其周围环境，会自觉或不自觉地遗留下痕迹。
 
 > 2017-10-07 想真心走进一个人谈何容易，每一个人都在坚守着自己那片骄傲的孤岛。
@@ -130,7 +130,7 @@ tag: 思考
 
 > 2017-10-18  "你所经历的我也曾经抵达，我正遭受的也许甚于你的今天。可是，我还是想和你做一个约定，就像是守望那间小店一样的邀约：我在春天等你" -------和菜头
 
-> 2017-10-19 好久没认真坐下来，反思审视写一些东西了。 
+> 2017-10-19 好久没认真坐下来，反思审视写一些东西了。
 
 > 2017-10-22 习惯了压抑自己，再沉重的心情，选择去逃避面对自己，减少它带给自己的创痛。自身道路的迷茫，灰暗的现状，无力作出改变的困境，让自己除了沉默，忍受，做不了什么。
 
@@ -146,3 +146,4 @@ tag: 思考
 
 > 2017-12-17 很失败的一次周分享，脱稿分享 Ruby，想象中按着计划应该会不差，同事应该能 Get 我的意思。事实中状态不断，脱线，段节奏。让自己中途试图想快点结束。失败原因是，准备不充分，高估了别人的理解能力。这个分享我会一直坚持下去，注重锻炼，培训自己机会。
 
+> 2017-12-19 今天异常难过，在这凛冽的天气里，原来只有我形单影只。
