--- a/_posts/2017-01-03-2017年日常.md
+++ b/_posts/2017-01-03-2017年日常.md
@@ -147,3 +147,5 @@ tag: 思考
 > 2017-12-17 很失败的一次周分享，脱稿分享 Ruby，想象中按着计划应该会不差，同事应该能 Get 我的意思。事实中状态不断，脱线，段节奏。让自己中途试图想快点结束。失败原因是，准备不充分，高估了别人的理解能力。这个分享我会一直坚持下去，注重锻炼，培训自己机会。
 
 > 2017-12-19 今天异常难过，在这凛冽的天气里，原来只有我形单影只。
+
+> 2017-12-25 圣诞节，第一次收到礼物，两双袜子，一包糖。满身欢喜的拿起了手机，打算分享，顿了顿，又只能继续戴上耳机,不想再被节日的氛围侵扰到。
