--- a/_posts/2018-01-07-2018日常.md
+++ b/_posts/2018-01-07-2018日常.md
@@ -6,3 +6,5 @@ tag: 思考
 ---
 
 > 2018-01-07 hello 2018
+
+> 2018-01-15 没有背景，没有爹妈支持的人，他的选择真的很少。所以真正的悲剧，是现在的一个假象：(看上去)什么选择都在，而逼到你面前的问题，就是你(其实)没有多少选择。—— 陈丹青《圆桌派》
