--- a/_posts/2018-01-02-一切都是那么糟.md
+++ b/_posts/2018-01-02-一切都是那么糟.md
@@ -29,7 +29,7 @@ tag: 思考
 
 2018
 ====
-今年的年末我过得特别的平静，内心再也没有了蠢蠢欲动的新年狂热，更多的是平静。2017 的最后一天，选择去影院看部电影，以电影结束这年。我一个人站在霓虹灯璀璨，冷风刺骨，满城喧嚣里，落寞地想到：2017年，她真的就离开了，2018 年，就这么不可抗拒地来了。我知道，我什么都抓不住。我只是一个迷失了的孩子，站在时间的渡口，迎来送往。也许平庸的人最终还是归于平庸，无论如何挣扎，但除了义无反顾的上路，也没其他选择了。
+今年的年末我过得特别的平静，内心再也没有了蠢蠢欲动的新年狂热，更多的是平静。2017 的最后一天，选择去影院看部电影，以电影结束这年。我一个人站在霓虹灯璀璨，冷风刺骨，满城喧嚣里，落寞地想到：2017年，她真的就离开了，2018 年，就这么不可抗拒地来了。我知道，我什么都抓不住。我只是一个迷失了的孩子，站在时间的渡口，迎来送往。
 
 - 拼命学
 - 不再封闭自己
