--- a/_posts/2018-01-07-2018日常.md
+++ b/_posts/2018-01-07-2018日常.md
@@ -10,3 +10,5 @@ tag: 思考
 > 2018-01-15 没有背景，没有爹妈支持的人，他的选择真的很少。所以真正的悲剧，是现在的一个假象：(看上去)什么选择都在，而逼到你面前的问题，就是你(其实)没有多少选择。—— 陈丹青《圆桌派》
 
 > 2018-01-25 久违的雪，十几年没见过雪了，预想过很多下雪的场景，现如今且一点玩赏的意念都没有了。
+
+> 2018-01-31 漫图摄影公司年会，别人恣意张扬，色彩斑斓的青春，让自己的更显苍白，好像自己的青春一直在缺席，从未来过。只能不断追悔，年纪越来越大不可能再疯狂了。如果不再把自己所剩无几的美好时光，倾注于某个事业，真的会浪费大好青春。不能让日益稀薄的头发白白掉落。我相信终于那一天，我能勇于去追寻自己渴望的东西。
