--- a/_posts/2018-01-07-2018日常.md
+++ b/_posts/2018-01-07-2018日常.md
@@ -13,4 +13,6 @@ tag: 思考
 
 > 2018-01-31 漫图摄影公司年会，别人恣意张扬，色彩斑斓的青春，让自己的更显苍白，好像自己的青春一直在缺席，从未来过。只能不断追悔，年纪越来越大不可能再疯狂了。如果不再把自己所剩无几的美好时光，倾注于某个事业，真的会浪费大好青春。不能让日益稀薄的头发白白掉落。我相信终于那一天，我能勇于去追寻自己渴望的东西。
 
-> 2018-04-06 一个人压抑久了，另哭都会忘记，只会干笑了。
+> 2018-04-06 一个人压抑久了，连哭都会忘记，只会干笑了。
+
+> 2018-04-08 “小时候以为坚持就是永不动摇，长大后才明白，坚持是犹豫着、退缩着、挣扎着，但还在继续往前走 。”
