--- a/_posts/2018-01-07-2018日常.md
+++ b/_posts/2018-01-07-2018日常.md
@@ -16,3 +16,5 @@ tag: 思考
 > 2018-04-06 一个人压抑久了，连哭都会忘记，只会干笑了。
 
 > 2018-04-08 “小时候以为坚持就是永不动摇，长大后才明白，坚持是犹豫着、退缩着、挣扎着，但还在继续往前走 。”
+
+> 2018-04-09 别留恋，别恐惧.
