--- a/_posts/2018-01-07-2018日常.md
+++ b/_posts/2018-01-07-2018日常.md
@@ -18,3 +18,6 @@ tag: 思考
 > 2018-04-08 “小时候以为坚持就是永不动摇，长大后才明白，坚持是犹豫着、退缩着、挣扎着，但还在继续往前走 。”
 
 > 2018-04-09 别留恋，别恐惧.
+
+> 2018-04-11  "成功的关键在于，既知道如何努力追求很多东西，也知道如何“正确地失败”——能够在经历失败的痛苦过程中吸取重要的教训，从而避免被踢出局（错误的失败）。", "人要变得特别成功需要看到很多东西，但任何人都看不到全景，只是有的人看的到多一些。自身视野宽阔，又能与其他聪明人良好地沟通，了解他们不同的有益视角，这样的人才会做得最好。"
+
