--- a/_posts/2018-01-07-2018日常.md
+++ b/_posts/2018-01-07-2018日常.md
@@ -24,3 +24,5 @@ tag: 思考
 > 2018-04-12 「这些年我一直提醒自己一件事情，千万不要自己感动自己。大部分人看似的努力，不过是愚蠢导致的。什么熬夜看书到天亮，连续几天只睡几小时，多久没放假了，如果这些东西也值得夸耀，那么富士康流水线上任何一个人都比你努力多了。人难免天生有自怜的情绪，唯有时刻保持清醒，才能看清真正的价值在哪里。」———By于宙.《我们这一代人的困惑》
 
 > 2018-04-15 走的异常艰难。
+
+> 2018-04-16 你是怎么样的人，就会发生怎样的故事，认认真真生活，该发生的就会发生。
