--- a/_posts/2018-01-07-2018日常.md
+++ b/_posts/2018-01-07-2018日常.md
@@ -38,3 +38,5 @@ tag: 思考
 > 2018-07-10 开了一个公众号，尝试去写一些有质量的文章。
 
 > 2018-09-02 没有那么多的爱，是为了了无牵挂。
+
+> 2018-10-13 什么是真实？你看到什么，听到什么，做什么，和谁在一起，如果有一种从心灵深处满溢出来的，不懊悔也不羞耻的，平和与喜悦，那就是真实。
