--- a/_posts/2018-12-25-至灰时刻.md
+++ b/_posts/2018-12-25-至灰时刻.md
@@ -42,7 +42,7 @@ tag: 思考
 - 系统性的学习了区块链知识，对它的方向和轮廓大致明白了。
 - 终于如愿的用上了 docker。
 
-逐渐摆脱了书影音的桎梏，这是去年立下 flag，因为想要更专注了一个领域，杜绝能分散自己注意力的爱好。但还是看了不少，但都是泛泛而读，缺少理解和浸泡，有输出，才算真正的吸收。
+逐渐摆脱了书影音的桎梏，这是去年立下 flag，因为想要更专注了一个领域，杜绝能分散自己注意力的爱好。但还是看了不少，但都是泛泛而读，缺少理解和浸泡。有输出才算真正的吸收。
 
 ### 总结
 
