--- a/_posts/2019-02-20-2019日常.md
+++ b/_posts/2019-02-20-2019日常.md
@@ -13,3 +13,6 @@ tag: 思考
 - 保留和发展自己的“怪癖”，并将其发展成自己的竞争力
 - 为小事物狂热，并在小事物中发现大世界
 - 开展思想实验和行动实验，让思想和行动相互激发
+
+> 2019-03-14
+别人总问我为什么来这座城市，说出没结尾的故事没意义，只能苦笑说是梦的指引。
