update daily post

--- a/_posts/2019-02-20-2019日常.md
+++ b/_posts/2019-02-20-2019日常.md
@@ -26,3 +26,6 @@ tag: 思考
 > 你想伸手说出舍不得走，它却高傲的抬起了头，生活你永远猜不透，如若相逢无须问侯，就像多年失散的朋友
 
 > 但凡刻骨铭心，必定伤筋动骨。
+
+> 2019-03-19
+邓宁·克鲁格效应说的是一种认知偏差现象，指的是能力欠缺的人在自己欠考虑的思考基础上得出错误结论，正如达尔文所说“无知比博学更容易带来自信。” 而当一个人开始学习新的知识，他原有的认知可能会被打破，这时候就陷入了绝望之谷。如果就此放弃，也可以在固有的思维和世界里打转，如果选择继续学习，将进入一个缓慢重新构建认知的过程，也就是开悟之坡，而这点滴知识与经验的累积会使你终将成为大师。
